sonarr: Fix probes for app-template v3

--- a/apps/sonarr/values.yaml
+++ b/apps/sonarr/values.yaml
@@ -20,6 +20,7 @@ app-template:
 
           probes:
             liveness: &probe
+              enabled: true
               custom: true
               spec:
                 httpGet:
