--- a/apps/telegram-bot/values.yaml
+++ b/apps/telegram-bot/values.yaml
@@ -25,6 +25,16 @@ app-template:
             limits:
               cpu: 500m
               memory: 32Mi
+          probes:
+            liveness:
+              enabled: true
+            readiness:
+              enabled: true
+            startup:
+              enabled: true
+              spec:
+                failureThreshold: 30
+                periodSeconds: 5
 
   service:
     telegram-bot:
