--- a/apps/wallabag/values.yaml
+++ b/apps/wallabag/values.yaml
@@ -42,15 +42,16 @@ app-template:
             SYMFONY__ENV__FOSUSER_REGISTRATION: false
 
           probes:
+            liveness:
+              enabled: true
+            readiness:
+              enabled: true
             startup:
               enabled: true
               spec:
                 initialDelaySeconds: 30
                 failureThreshold: 30
                 periodSeconds: 10
-                successThreshold: 1
-                timeoutSeconds: 1
-
           resources:
             requests:
               cpu: 10m
