--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -37,9 +37,12 @@ app-template:
             readiness: *probe
             startup:
               enabled: true
+              custom: true
               spec:
                 failureThreshold: 30
                 periodSeconds: 5
+                tcpSocket:
+                  port: *port
 
   service:
     unifi:
