--- a/apps/mosquitto-tls/values.yaml
+++ b/apps/mosquitto-tls/values.yaml
@@ -1,6 +1,6 @@
 app-template:
   controllers:
-    main:
+    mosquitto:
       replicas: 1
       type: statefulset
       annotations:
@@ -19,7 +19,7 @@ app-template:
               chmod 600 /mosquitto/external_config/mosquitto_pwd &&
               mosquitto_passwd -U /mosquitto/external_config/mosquitto_pwd
       containers:
-        main:
+        mosquitto:
           image:
             repository: public.ecr.aws/docker/library/eclipse-mosquitto
             tag: 2.0.18
@@ -48,8 +48,9 @@ app-template:
                   port: *port
 
   service:
-    main:
+    mosquitto:
       type: LoadBalancer
+      controller: mosquitto
       annotations:
         # Cilium v1.16+
         lbipam.cilium.io/ips: "192.168.193.10"
@@ -84,23 +85,23 @@ app-template:
       type: configMap
       name: mosquitto-tls-config
       advancedMounts:
-        main:
-          main:
+        mosquitto:
+          mosquitto:
             - path: /mosquitto/config/mosquitto.conf
               subPath: mosquitto.conf
     secret-file:
       type: secret
       name: mosquitto-tls-user
       advancedMounts:
-        main:
+        mosquitto:
           01-init-config:
             - path: /tmp/secret
     tls:
       type: secret
       name: mosquitto-tls-crt-secret
       advancedMounts:
-        main:
-          main:
+        mosquitto:
+          mosquitto:
             - path: /mosquitto/tls
     external-config:
       type: emptyDir
