--- a/apps/m-rajoy-api/values.yaml
+++ b/apps/m-rajoy-api/values.yaml
@@ -1,9 +1,9 @@
 app-template:
   controllers:
-    m-rajoy-front:
+    main:
       replicas: 1
       containers:
-        m-rajoy-front:
+        main:
           image:
             repository: pando85/quotes-simple-web-api
             tag: 1.0.0
@@ -34,14 +34,13 @@ app-template:
               memory: 128Mi
 
   service:
-    m-rajoy-front:
-      controller: m-rajoy-front
+    main:
       ports:
         http:
           port: *port
 
   ingress:
-    m-rajoy-front:
+    main:
       enabled: true
       className: nginx-internal
       annotations:
@@ -53,7 +52,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                identifier: m-rajoy-front
+                name: main
                 port: http
       tls:
         - hosts:
@@ -73,7 +72,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                identifier: m-rajoy-front
+                name: main
                 port: http
       tls:
         - hosts:
@@ -85,6 +84,8 @@ app-template:
       runAsUser: 995
       runAsGroup: 991
       fsGroup: 991
+
+    enableServiceLinks: false
 
     topologySpreadConstraints:
       - maxSkew: 1
