--- a/apps/m-rajoy-front/values.yaml
+++ b/apps/m-rajoy-front/values.yaml
@@ -1,9 +1,9 @@
 app-template:
   controllers:
-    main:
+    m-rajoy-front:
       replicas: 2
       containers:
-        main:
+        m-rajoy-front:
           image:
             repository: pando85/quotes-simple-web-front
             tag: 1.0.0
@@ -21,15 +21,25 @@ app-template:
             limits:
               cpu: 500m
               memory: 32Mi
-
+          probes:
+            liveness:
+              enabled: true
+            readiness:
+              enabled: true
+            startup:
+              enabled: true
+              spec:
+                failureThreshold: 30
+                periodSeconds: 5
   service:
-    main:
+    m-rajoy-front:
+      controller: m-rajoy-front
       ports:
         http:
           port: 80
 
   ingress:
-    main:
+    m-rajoy-front:
       enabled: true
       className: nginx-internal
       annotations:
@@ -41,7 +51,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: m-rajoy-front
                 port: http
       tls:
         - hosts:
@@ -61,7 +71,7 @@ app-template:
             - path: /
               pathType: Prefix
               service:
-                name: main
+                identifier: m-rajoy-front
                 port: http
       tls:
         - hosts:
