kanidm: Add readOnly for certs volume

--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -127,3 +127,4 @@ app-template:
       name: idm-external-tls-certificate
       globalMounts:
         - path: /data/tls
+          readOnly: true
