nextcloud: Increase memory limit to 1Gi

--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -90,7 +90,7 @@ nextcloud:
 
   resources:
     limits:
-      memory: 512Mi
+      memory: 1Gi
     requests:
       cpu: 400m
       memory: 200Mi
