kube-router: Add enable pod egress false

--- a/system/kube-system/kube-router-values.yaml
+++ b/system/kube-system/kube-router-values.yaml
@@ -5,6 +5,7 @@ kubeRouter:
   router:
     enabled: true
     enableOverlay: true
+    enablePodEgress: false
     enableIbgp: true
     enableCni: false
     clusterAsn: 64513
