--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -53,6 +53,7 @@ app-template:
         lbipam.cilium.io/ips: "192.168.193.2"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.2"
+        metallb.universe.tf/loadBalancerIPs: "192.168.193.2"
       ports:
         http:
           port: *port
