--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -79,7 +79,8 @@ ingress-nginx:
         lbipam.cilium.io/ips: "192.168.193.4"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.4"
-      loadBalancerClass: "io.cilium/bgp-control-plane"
+        metallb.universe.tf/loadBalancerIPs: "192.168.193.4"
+      # loadBalancerClass: "io.cilium/bgp-control-plane"
       enableHttp: true
       enableHttps: true
 
