--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -70,6 +70,7 @@ app-template:
         lbipam.cilium.io/ips: "192.168.193.8"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.8"
+        metallb.universe.tf/loadBalancerIPs: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
       ports:
