metallb: Test external traffic policy local

--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -73,6 +73,7 @@ app-template:
         metallb.universe.tf/loadBalancerIPs: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         ldaps:
           port: 636
