--- a/apps/mosquitto/values.yaml
+++ b/apps/mosquitto/values.yaml
@@ -96,6 +96,7 @@ app-template:
         metallb.universe.tf/loadBalancerIPs: "192.168.193.9"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         mqtt:
           port: *port
