--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -91,6 +91,7 @@ app-template:
         io.cilium/lb-ipam-ips: "192.168.193.7"
         metallb.universe.tf/loadBalancerIPs: "192.168.193.7"
         external-dns.alpha.kubernetes.io/enabled: "true"
+      externalTrafficPolicy: Local
       ports:
         bittorrent:
           enabled: true
