--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -102,6 +102,7 @@ app-template:
         metallb.universe.tf/loadBalancerIPs: "192.168.193.3"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: transcoder-rabbit.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         tcp-clients:
           enabled: true
