--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -54,6 +54,7 @@ app-template:
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.2"
         metallb.universe.tf/loadBalancerIPs: "192.168.193.2"
+      externalTrafficPolicy: Local
       ports:
         http:
           port: *port
