--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -81,6 +81,7 @@ ingress-nginx:
         io.cilium/lb-ipam-ips: "192.168.193.4"
         metallb.universe.tf/loadBalancerIPs: "192.168.193.4"
       # loadBalancerClass: "io.cilium/bgp-control-plane"
+      externalTrafficPolicy: Local
       enableHttp: true
       enableHttps: true
 
