Revert "kube-system: Add metalLB to replace cilium BGP control plane"
This reverts commit 0983565e97b0b93a5838602c99b73c369257b0bf.

--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -80,8 +80,7 @@ ingress-nginx:
         lbipam.cilium.io/ips: "192.168.193.1"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.1"
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.1"
-      # loadBalancerClass: "io.cilium/bgp-control-plane"
+      loadBalancerClass: "io.cilium/bgp-control-plane"
       enableHttp: true
       enableHttps: true
       ports:
