--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -79,8 +79,7 @@ ingress-nginx:
         lbipam.cilium.io/ips: "192.168.193.4"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.4"
-        metallb.universe.tf/loadBalancerIPs: "192.168.193.4"
-      # loadBalancerClass: "io.cilium/bgp-control-plane"
+      loadBalancerClass: "io.cilium/bgp-control-plane"
       enableHttp: true
       enableHttps: true
 
