prowlarr: Fix `securityContext` key name

--- a/apps/prowlarr/values.yaml
+++ b/apps/prowlarr/values.yaml
@@ -92,7 +92,7 @@ app-template:
           secretName: prowlarr-external-tls-certificate
 
   defaultPodOptions:
-    podSecurityContext:
+    securityContext:
       runAsUser: 568
       runAsGroup: 568
       fsGroup: 568
