--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -63,7 +63,7 @@ app-template:
             repository: acockburn/appdaemon
             tag: 4.4.2
           env:
-            HA_URL: http://home-assistant:8123
+            HA_URL: http://home-assistant-hass:8123
             DASH_URL: https://appdaemon.grigri.cloud
             TIMEZONE: Europe/Madrid
           envFrom:
