hass: Add last connection sensor app to appdaemon and fix service monitor

--- a/apps/home-assistant/appdaemon/apps/apps.yaml
+++ b/apps/home-assistant/appdaemon/apps/apps.yaml
@@ -17,3 +17,7 @@ climate_control:
     off_mode: DHW
   fallback_cheap_electricity_price: 0.09
   log_level: INFO
+
+last_connection_sensor:
+  module: last_connection_sensor
+  class: LastConnectionSensor
