hass: Fix prometheus rule name

--- a/apps/home-assistant/templates/prometheus-rules.yaml
+++ b/apps/home-assistant/templates/prometheus-rules.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: mosquitto
+  name: hass
   labels:
     operator.prometheus.io/instance: prometheus-long-term
 spec:
