hass: Enable AppDaemonDown alert after tested

--- a/apps/home-assistant/rules/custom.yaml
+++ b/apps/home-assistant/rules/custom.yaml
@@ -1,5 +1,5 @@
 - alert: AppDaemonDown
-  expr: hass_last_updated_time_seconds{domain="sensor",entity="sensor.last_appdaemon_connection"} > time() - 60
+  expr: hass_last_updated_time_seconds{domain="sensor",entity="sensor.last_appdaemon_connection"} < time() - 60
   annotations:
     description: |
       App daemon is not updating {{ $labels.entity }} since the last 10m. App daemon can be disconnected
