metal: Upgrade zfs-exporter to 2.3.2

--- a/metal/roles/zfs_exporter/tasks/main.yml
+++ b/metal/roles/zfs_exporter/tasks/main.yml
@@ -25,7 +25,7 @@
         src: /tmp/zfs_exporter-{{ zfs_exporter_version }}.linux-amd64/zfs_exporter
         dest: /usr/local/bin
         mode: "0755"
-
+      notify: Restart zfs-exporter
 
 - name: Create the systemd service
   become: true
