metal: Add renovate to zfs-exporter

--- a/metal/roles/zfs_exporter/defaults/main.yml
+++ b/metal/roles/zfs_exporter/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
+# renovate: datasource=github-releases depName=pdf/zfs_exporter versioning=regex:^(?<major>\d+)(\.(?<minor>\d+))?(\.(?<patch>\d+))$
 zfs_exporter_version: 2.3.2
 zfs_exporter_arguments: --collector.dataset-snapshot
