--- a/metal/roles/zfs_exporter/defaults/main.yml
+++ b/metal/roles/zfs_exporter/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
 # renovate: datasource=github-releases depName=pdf/zfs_exporter versioning=regex:^(?<major>\d+)(\.(?<minor>\d+))?(\.(?<patch>\d+))$
 zfs_exporter_version: 2.3.2
-zfs_exporter_arguments: --collector.dataset-snapshot
+# deadline: Maximum duration that a collection should run before returning cached data.
+#     Should be set to a value shorter than your scrape timeout duration. The current collection
+#     run will continue and update the cache when complete (default: 8s)
+zfs_exporter_arguments: --collector.dataset-snapshot --deadline=30s
