--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   nodeSelector:
     matchLabels:
-      name: grigri
+      kubernetes.io/os: linux
   virtualRouters:
     - localASN: 64513
       # this allows routingMode native withouth the need of autoDirectNodeRoutes true: Not tested
